--- a/thrive.html
+++ b/thrive.html
@@ -362,14 +362,14 @@
 								</p>
 								<img src="images/thriveprototype1.png" class="img-responsive">
 						</div>
-	</div><br>
+	</div><br><br>
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<h3>Feature Elimination</h3>
 
 			<p>
 			Many users also stated the education feature in the app was the least helpful. I traced back my thought process on why I originally wanted to include the feature in my solution. I found a strong enough argument to not move forward with the education feature. My app was meant to be quick,  convenient and foster a habit in my users. I felt the education feature was not adding to that mission.
-			</p>
+		</p><br>
 			<img src="images/thriveelimination.png" class="img-responsive">
 	</div>
 </div>
@@ -382,7 +382,7 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Solution</h2>
 								<h3>Second Prototype</h3>
-								<p>Most notable change was from the first and second prototype was how my weekly goal illustration was displayed in the Achievements screen. In the previous usability testing, users reported that they could not tell what stage of the goal they were in so for the second prototype, I included a day by day goal indicator. I also removed the "education" section because it worked much better in theory than in reality. </p>
+								<p>Most notable change from the first and second prototype was how my weekly goal illustration was displayed in the Achievements screen. In the previous usability testing, users reported that they could not tell what stage of the goal they were in because there was just an image and a "plus" button which gave them no context. So for the second prototype, I included a day by day goal indicator.</p>
 								</div>
 	</div>
 </section>
