--- a/lexmark.html
+++ b/lexmark.html
@@ -494,6 +494,8 @@
 								                   <p>When attempting a redesign, figure out why the previous designers designed the product in the way they did.<br><br>
 								                   When designing for a company, make sure the visuals for the product stay within company's branding and style guide.<br>
 								                 	<br>Frequently communicate with developers about specific details of the design rather than relying on them to list all the limitations.<br><br>
+As a designer, we cannot always do what is best for our users. We need to be able to do what is best for our users given the resources that we have. For this project, I needed to consider what was feasible for the engineering team and took the extra time to change my design.<br><br>
+
 																	Determined that I want to be a designer and not a researcher. The type of design I enjoy is design research while UX research roles require a different set of skills.
 																	<br><br><br><br>
 
