--- a/thrive.html
+++ b/thrive.html
@@ -464,7 +464,8 @@
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<p>1. Technology only amplifies underlying human forces. So study people, learn about people, and listen to people. For technology to actually work, the right intent and capacity have to be there first.<br>
-								2. When designing for an app that is meant to encourage a  lifestyle change, it does not mean I have to include a lot of features. Always consider the bare necessities for a successful product(the mvp).
+								2. When designing for an app that is meant to encourage a  lifestyle change, it does not mean I have to include a lot of features. Always consider the bare necessities for a successful product(the mvp).<br>
+								3. As designers, we should listen to our users but not blindly allow them to tell us what to do. We need to interpret our findings from user research and make sense of them before supporting out design decisions.
 
 								</p>
 						</div>
