--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 						<div class="row">
 							<div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
 								<div style="padding-top:1.5em;padding-left:1em; padding-bottom:2em;">
-									<h1>Michelle (minjin) Kim</h1>
-									<p>Hi! 👋 I'll be graduating in May from the University of Michigan with a masters in Human-Computer Interaction. I'm a product designer who is passionate about helping others with intentional design decisions.</p>
+									<h1>Nice to meet you!</h1>
+									<p>I'm Michelle, a product designer who recently graduated from the University of Michigan. I'm a passionate designer who is equally comfortable with starting the design process from scratch as maintaining products throughout their lifecycles.</p>
 								</div>
 							</div>
 							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
