--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 						<div class="row">
 							<div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
 								<div style="padding-top:1.5em;padding-left:1em; padding-bottom:2em;">
-									<h1>Nice to meet you!</h1>
-									<p>I'm Michelle, a product designer who recently graduated from the University of Michigan. I'm a passionate designer who is equally comfortable with starting the design process from scratch as maintaining products throughout their lifecycles.</p>
+									<h1>Hi, it's nice to meet you</h1>
+									<p>I'm Michelle, a product designer and a recent design grad from the University of Michigan. I'm a passionate designer who is equally comfortable with starting the design process from scratch as well as maintaining products throughout their lifecycles.</p>
 								</div>
 							</div>
 							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
