--- a/thrive.html
+++ b/thrive.html
@@ -20,6 +20,7 @@
 	<meta name="description" content="">
 
 	<!-- STYLESHEET CSS FILES -->
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -120,15 +121,15 @@
 </div>
 
 
-<div class="row">
+<!-- <div class="row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<h3>My Process</h3>
 		<p>With this idea, there were many questions I needed answered. I knew assisting users to make such a significant lifestyle change such as quitting meat would not be a straight-forward problem. I needed to take special care in unravelling the complexities of human behavior and I felt methods such as surveys would lack when I was trying to understand the nuances of people's narratives.</p><br>
 		<img src="images/thriveprocess.png" class="img-responsive"><br><br>
 
-		<!-- I have always believed that the first step of the design process is to formulate a flexible project plan that is uniquely catered to the needs of the project.  -->
+		I have always believed that the first step of the design process is to formulate a flexible project plan that is uniquely catered to the needs of the project.
 </div>
-</div>
+</div> -->
 
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -161,12 +162,12 @@
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-								<h3>Interview Findings </h3>
+								<h3>Interview Insights </h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>I wanted to learn about how vegans became vegans, what  obstacles non-vegans experienced when trying to become vegan, and what current struggles some vegans faced. I conducted 10 semi-structured interviews with 3 vegans and 7 omnivores. </p><br>
+								<p>I wanted to learn about how vegans became vegans, what obstacles non-vegans experienced, and what current struggles vegans faced. I conducted 10 semi-structured interviews with 3 vegans and 7 omnivores. </p><br>
 <img src="images/thriveinterview.png" class="img-responsive"><br><br>
 </div>
 </div>
@@ -187,13 +188,13 @@
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">The Research</h2>
-								<h3>Competitive Analysis Findings</h3>
+							<!-- <h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">The Research</h2> -->
+								<h3>Competitive Analysis Discovery</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>After identifying the obstacles users needed to overcome, I wanted to see if there was currently a solution in the market that addressed all four obstacles. I examined three mobile apps that aimed to help people eat less meat. I discovered there was still room for an all-in-one solution.</p><br>
+								<p>After examining all the apps in the market that helped people eat less meat, I realized an all-in-one solution that addressed all four discoved user needs didn't exist. </p><br>
 								<img src="images/thrivecompetitor.png" class="img-responsive">
 
 <!-- <img src="images/thrivecompetitive.png" class="img-responsive"> -->
@@ -207,35 +208,51 @@
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Identifying Design Opportunities</h2>
-								<h3>Persona</h3>
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design Opportunities</h2>
+								<h3>Personas</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Taking insights from the interviews, I created 3 personas that represented the archetypes of the user group: people who wanted to become vegan for health reasons, people who wanted to become vegan for environmental reasons, and people who wanted to become vegan for others such as animals. Throughout the process, I turned back to the personas to make sure every design decision was looping back to user needs.
-								</p>
-												<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-									<img src="images/thrivepersona.png" class="img-responsive">
-						</div>
-	</div>
-	</div>
+								<p>I created 3 personas: 1 vegan and 2 omnivores who all wanted to become vegan for different reasons. Personas were created to ensure that every design decision looped back to meet user needs.
+								</p><br>
+									<div class="w3-content" style="max-width:900px">
+									  <img class="mySlides" src="images/thrivepersona1.png" style="width:100%;display:none">
+									  <img class="mySlides" src="images/thrivepersona2.png" style="width:100%">
+									  <img class="mySlides" src="images/thrivepersona3.png" style="width:100%;display:none">
+
+									  <div class="w3-row-padding w3-section">
+									    <div class="w3-col s4">
+									      <img class="demo w3-opacity w3-hover-opacity-off" src="images/thrivepersona1.png" style="width:100%;cursor:pointer" onclick="currentDiv(1)">
+									    </div>
+									    <div class="w3-col s4">
+									      <img class="demo w3-opacity w3-hover-opacity-off" src="images/thrivepersona2.png" style="width:100%;cursor:pointer" onclick="currentDiv(2)">
+									    </div>
+									    <div class="w3-col s4">
+									      <img class="demo w3-opacity w3-hover-opacity-off" src="images/thrivepersona3.png" style="width:100%;cursor:pointer" onclick="currentDiv(3)">
+									    </div>
+									  </div>
+									</div>	</div></div></div></div>
 </section>
+
 
 
 <section>
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Identifying Design Opportunities</h2>
+							<!-- <h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Identifying Design Opportunities</h2> -->
 								<h3>Journey Maps</h3>
 
 						</div></div>
 						<div class="row link">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>I then mapped out a journey map for each of my personas detailing their actions throughout the day and the potential emotions involved. The journey maps were extremely helpful in helping me visualize the personas' areas of frustration and create focal points in the problem space. The journey map template can be found <a href="https://www.google.com/search?q=geunbae+journey+maps&rlz=1C5CHFA_enUS778US778&oq=geunbae+journey+maps&aqs=chrome..69i57.6013j0j7&sourceid=chrome&ie=UTF-8">here</a>.
+								<p>The <a target="_blank" href="https://kminjin.github.io/documents/thrivejourneymap.png">journey map</a> for my persona Julianne, further supported the existence of many problems discovered during the interviews.
+
+
 								</p>
-		<img src="images/thrivejourneymap.png" class="img-responsive">
+									<!-- The journey maps reinforced the insights discovered during the interviews and helped me visualize the users' areas of frustration. -->
+		<br><img src="images/thrivejourneyquotes.png" class="img-responsive">
 						</div>
 	</div>
 	</div>
@@ -247,14 +264,15 @@
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Ideation</h2>
-								<h3>Diverging</h3>
+							<h3>Product requirements</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Clearly, helping people eliminate meat from their diet was not going to be an easy task. I tried to brainstorm as many ideas as I can during the ideation phase. I've thought of ways how to motivate a wide group of people with different concerns, how I would address user group's lack of experience in this journey, and how I would provide the social support.
+								<p>After understanding the needs of my target group, I generated a series of themes to consider while ideating. My product needed to be motivating, convenient, and resourceful.
+									<br><br><img src="images/thriveideation.png" class="img-responsive">
 								</p>
-								<img src="images/thrivediverging.png" class="img-responsive">
+								<!-- <img src="images/thrivediverging.png" class="img-responsive"> -->
 						</div>
 	</div>
 	</div>
@@ -265,15 +283,14 @@
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Ideation</h2>
-								<h3>Converging</h3>
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Defining the Product</h2>
+								<h3>The Experience</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>After considering all the possibilities, I weighed the pros and cons for each feature and narrowed it down to four features.
-								</p><br>
-								<img src="images/thrivefourfeature.png" class="img-responsive">
+
+								<img src="images/thrivedecisions.png" class="img-responsive">
 						</div>
 	</div>
 	</div>
@@ -283,38 +300,20 @@
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Ideation</h2>
-								<h3>User Flow</h3>
+								<h3>The User Flow</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>After I felt I finalized my features (spoiler, I did not), I worked out the user flow. It helped me get a rough idea about how I wanted to map out Thrive from onboarding to finish.
-								</p>
-								<img src="images/thriveflow.png" class="img-responsive"><br>
+
+								<img src="images/thriveflow.png" class="img-responsive">
 						</div>
 	</div>
 	</div>
 </section>
 
-<section>
-<div class="contentblock content-wrapper750">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Ideation</h2>
-								<h3>Unexpected group of users</h3>
 
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>At this point, I realized I was forgetting one very important archetype of my user group. Although I interviewed 3 vegans in the process, I falsely did not see them as a user group. However I realized vegans also deserve to see the fruits of their decision, and they could also benefit greatly from the vegan recipes and social support. I decided to include few steps during the onboarding process for them. If users report they are vegan, they will asked to enter the start date for their vegan journey and their meat-free day count will reflect the entry.
-								</p>
-						</div>
-	</div>
-	</div>
-</section>
-
-<section>
+<!-- <section>
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -330,24 +329,9 @@
 						</div>
 	</div>
 	</div>
-</section>
-<section>
-<div class="contentblock content-wrapper750">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Refining</h2>
-								<h3>Wireframes</h3>
+</section> -->
 
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Another round of a quick feedback session was also done for the resulting wireframes.
-								</p>
-								<img src="images/thrivewireframes.png" class="img-responsive">
-						</div>
-	</div>
-	</div>
-</section>
+
 <section>
 <div class="contentblock content-wrapper750">
 		<div class="row">
@@ -362,17 +346,7 @@
 								</p>
 								<img src="images/thriveprototype1.png" class="img-responsive">
 						</div>
-	</div><br><br>
-	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<h3>Feature Elimination</h3>
-
-			<p>
-			Many users also stated the education feature in the app was the least helpful. I traced back my thought process on why I originally wanted to include the feature in my solution. I found a strong enough argument to not move forward with the education feature. My app was meant to be quick,  convenient and foster a habit in my users. I felt the education feature was not adding to that mission.
-		</p><br>
-			<img src="images/thriveelimination.png" class="img-responsive">
 	</div>
-</div>
 	</div>
 </section>
 
@@ -505,6 +479,27 @@
 <script src="js/nivo-lightbox.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
+<script>
+function currentDiv(n) {
+  showDivs(slideIndex = n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demo");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" w3-opacity-off", "");
+  }
+  x[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " w3-opacity-off";
+}
+</script>
 
 
 </body>
