--- a/thrive.html
+++ b/thrive.html
@@ -20,7 +20,7 @@
 	<meta name="description" content="">
 
 	<!-- STYLESHEET CSS FILES -->
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -103,8 +103,11 @@
 						<div class="link">
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h3>Initial Problem Discovery</h3>
-								<p>As an environmental advocate, I've always sought ways to help our planet. While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the <a href="https://www.cowspiracy.com/facts">animal agriculture industry was the biggest contributor to climate change.</a> To address this issue, I decided to help minimize the negative impact of the animal agriculture industry on our Earth, by exploring ways to help people eat less meat.
+								<h3>The Problem</h3>
+								<p>As an environmental advocate, I've always sought ways to help our planet. While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the <a href="https://www.cowspiracy.com/facts">animal agriculture industry was the biggest contributor to climate change.</a> To address this issue, I decided to explore ways to help people eat less meat.<br><br>
+									How can I as a product designer, help people eat less meat? <br>
+									Who is my user group? <br>
+									What features are they looking for?
 
 								</p>
 
@@ -113,12 +116,6 @@
 
 </div>
 
-<div class="row">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<h3>The Problem</h3>
-		<p>How can I as a product designer, help people eat less meat? Who is my user group? What features are they looking for?</p><br>
-</div>
-</div>
 
 
 <!-- <div class="row">
@@ -162,13 +159,16 @@
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-								<h3>Interview Insights </h3>
+								<h3>User Interviews <span style="font-weight: normal;"> (10)</span> & Key Insights </h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>I wanted to learn about how vegans became vegans, what obstacles non-vegans experienced, and what current struggles vegans faced. I conducted 10 semi-structured interviews with 3 vegans and 7 omnivores. </p><br>
+								<p>My goal was to gather information about the struggles vegans faced when it came to maintaining their diet, the obstacles non-vegans saw in their journey to become vegan, and the different motivations behind veganism.
+</p><br>
 <img src="images/thriveinterview.png" class="img-responsive"><br><br>
+
+
 </div>
 </div>
 			<!-- <div class="row">
@@ -194,7 +194,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>After examining all the apps in the market that helped people eat less meat, I realized an all-in-one solution that addressed all four discoved user needs didn't exist. </p><br>
+								<p>My goal was to discover if there were still room for a solution that addressed all 4 interview insights. Examining the pro-veganism apps in the market showed me that the problem space didn't have an all-in-one solution yet.</p><br>
 								<img src="images/thrivecompetitor.png" class="img-responsive">
 
 <!-- <img src="images/thrivecompetitive.png" class="img-responsive"> -->
@@ -208,30 +208,37 @@
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design Opportunities</h2>
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Discovering Design Opportunities</h2>
 								<h3>Personas</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>I created 3 personas: 1 vegan and 2 omnivores who all wanted to become vegan for different reasons. Personas were created to ensure that every design decision looped back to meet user needs.
+								<p>With the interview data, I created 3 personas: 1 vegan and 2 omnivores who wanted to become vegan for different reasons. These personas ensured that every design decision looped back to meet user needs.
 								</p><br>
-									<div class="w3-content" style="max-width:900px">
-									  <img class="mySlides" src="images/thrivepersona1.png" style="width:100%;display:none">
-									  <img class="mySlides" src="images/thrivepersona2.png" style="width:100%">
-									  <img class="mySlides" src="images/thrivepersona3.png" style="width:100%;display:none">
+								<div class="w3-content w3-display-container">
 
-									  <div class="w3-row-padding w3-section">
-									    <div class="w3-col s4">
-									      <img class="demo w3-opacity w3-hover-opacity-off" src="images/thrivepersona1.png" style="width:100%;cursor:pointer" onclick="currentDiv(1)">
-									    </div>
-									    <div class="w3-col s4">
-									      <img class="demo w3-opacity w3-hover-opacity-off" src="images/thrivepersona2.png" style="width:100%;cursor:pointer" onclick="currentDiv(2)">
-									    </div>
-									    <div class="w3-col s4">
-									      <img class="demo w3-opacity w3-hover-opacity-off" src="images/thrivepersona3.png" style="width:100%;cursor:pointer" onclick="currentDiv(3)">
-									    </div>
-									  </div>
+<div class="w3-display-container mySlides">
+	<img src="images/thrivepersona2.png" style="width:100%">
+
+</div>
+
+<div class="w3-display-container mySlides">
+	<img src="images/thrivepersona1.png" style="width:100%">
+
+</div>
+
+<div class="w3-display-container mySlides">
+<img src="images/thrivepersona3.png" style="width:100%">
+
+</div>
+
+
+<button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
+<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
+
+</div>
+
 									</div>	</div></div></div></div>
 </section>
 
@@ -247,7 +254,7 @@
 						</div></div>
 						<div class="row link">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>The <a target="_blank" href="https://kminjin.github.io/documents/thrivejourneymap.png">journey map</a> for my persona Julianne, further supported the existence of many problems discovered during the interviews.
+								<p>The <a target="_blank" href="https://kminjin.github.io/documents/thrivejourneymap.png">journey map</a> for my persona Julianne, further supported the existence of many problems discovered in the interviews: <span style="font-weight:bold;">(1)</span> lack of experience with vegan recipes and<span style="font-weight:bold;"> (2)</span> inability to connect with people who are vegan.
 
 
 								</p>
@@ -269,7 +276,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>After understanding the needs of my target group, I generated a series of themes to consider while ideating. My product needed to be motivating, convenient, and resourceful.
+								<p>After understanding the needs of my target group, I generated a series of themes to consider while ideating. I determined that the more the users turn to my solution, the more effective my solution will be.
 									<br><br><img src="images/thriveideation.png" class="img-responsive">
 								</p>
 								<!-- <img src="images/thrivediverging.png" class="img-responsive"> -->
@@ -283,35 +290,35 @@
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Defining the Product</h2>
-								<h3>The Experience</h3>
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design</h2>
+								<h3>The Experience & User Flow</h3><br>
+									<p>After reviewing the product requirements, I decided my solution would be a mobile app due to its convenience for daily use. I created scenarios <span style="font-weight:bold;">(image 2)</span> detailing 3 key interactions between my app and its users. Then, I created a user flow to form the backbone of the app <span style="font-weight:bold;">(image 1)</span>.
+ </p><br>
+
+								<div class="w3-content w3-display-container">
+
+		<div class="w3-display-container mySlides2">
+		<img src="images/thriveflow.png" style="width:100%">
+
+		</div>
+
+		<div class="w3-display-container mySlides2">
+		<img src="images/thrivedecisions.png" style="width:100%">
+
+		</div>
+
+
+
+		<button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
+		<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
+
+		</div>
 
 						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-								<img src="images/thrivedecisions.png" class="img-responsive">
-						</div>
 	</div>
 	</div>
 </section>
-
-<section>
-<div class="contentblock content-wrapper750">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h3>The User Flow</h3>
-
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-								<img src="images/thriveflow.png" class="img-responsive">
-						</div>
-	</div>
-	</div>
-</section>
-
 
 <!-- <section>
 <div class="contentblock content-wrapper750">
@@ -330,6 +337,7 @@
 	</div>
 	</div>
 </section> -->
+
 
 
 <section>
@@ -480,26 +488,46 @@
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
 <script>
-function currentDiv(n) {
-  showDivs(slideIndex = n);
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
 }
 
 function showDivs(n) {
   var i;
   var x = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("demo");
   if (n > x.length) {slideIndex = 1}
   if (n < 1) {slideIndex = x.length}
   for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" w3-opacity-off", "");
+     x[i].style.display = "none";
   }
   x[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " w3-opacity-off";
 }
 </script>
+
+
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides2");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";
+  }
+  x[slideIndex-1].style.display = "block";
+}
+</script>
+
 
 
 </body>
