--- a/thrive.html
+++ b/thrive.html
@@ -95,7 +95,7 @@
 <!-- <div><a href="https://kminjin.github.io/documents/vegout_flexport.pdf" class="deckbutton center">PDF Version</a></div> -->
 
 <section>
-<div class="content-wrapper750">
+<div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Introduction</h2>
@@ -116,40 +116,28 @@
 
 </div>
 
-
-
-<!-- <div class="row">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<h3>My Process</h3>
-		<p>With this idea, there were many questions I needed answered. I knew assisting users to make such a significant lifestyle change such as quitting meat would not be a straight-forward problem. I needed to take special care in unravelling the complexities of human behavior and I felt methods such as surveys would lack when I was trying to understand the nuances of people's narratives.</p><br>
-		<img src="images/thriveprocess.png" class="img-responsive"><br><br>
-
-		I have always believed that the first step of the design process is to formulate a flexible project plan that is uniquely catered to the needs of the project.
-</div>
-</div> -->
-
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<h3>The Solution</h3>
 			<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing users the positive encouragement, the access to social support, and the tools they need to succeed.</p><br>
 	</div>
 	</div>
+
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<img src="images/thriveinfo.png" class="img-responsive">
+
+
+</div>
+</div>
+
 	</div>
 </section>
 
+
+
+
 <section>
-	<div class="contentblock container">
-	<img src="images/thriveinfo.png" class="img-responsive">
-</div>
-</div>
-
-</section>
-
-
-
-
-
-
 <div class="contentblock content-wrapper750">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -178,7 +166,6 @@
 								<p class="caption">Affinity Diagram<br></p></div>
 </div>
 </div> -->
-</section>
 
 	</div>
 	</div>	</div>
@@ -339,8 +326,72 @@
 </section> -->
 
 
+<section>
+<div class="contentblock content-wrapper750">
+		<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design Decisions</h2>
+								<h3>Wireframes and Feedback</h3>
+								<p>I created wireframes of the "Achievements" feature and ran A/B tests. The A/B tests helped me figure out what users preferred in terms of the ease of digesting the content, entering data, and visual appeal.<br><br>
+</p><br><br>
+						</div></div>
+
+						<div class="row">
+										<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
+
+											<img src="images/thriveab1.png" class="img-responsive">
+
+																	</div>
+																	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+																		<h3>Tabs VS Scroll</h3>
+																		<p>Users preferred to scroll over tabbing. <br><br> I went forward with option b because scrolling helped with information visibility and made it easier for users to digest the content.</p>
+
+</div></div><br><br><br><br><br><br>
+						<div class="row">
+							<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+								<img src="images/thriveab2.png" class="img-responsive">
+
+														</div>
+														<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+															<h3>Sticky VS Floating</h3>
+															<p>Users preferred the smaller FAB over the larger, sticky button.
+															<br><br>I went ahead with option B because users are more familiar with the smaller FAB and it also took up less screen space.</p>
+
+</div>
+						</div>
+	</div>
+	</div>
+</section>
 
 <section>
+<div class="contentblock content-wrapper750">
+		<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<h3>Design Decisions Continued</h3>
+<p></p>
+						</div></div><br><br><br><br>
+						<div class="row">
+							<div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+								<p>
+								</p>
+								<img src="images/thriveiteration1.png" class="img-responsive">
+						</div>
+</div><br><br><br><br><br><br>
+<div class="row">
+	<div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+		<p>
+		</p>
+		<img src="images/thriveiteration2.png" class="img-responsive">
+</div>
+</div><br><br><br><br><br><br>
+
+						<!-- <p>1. show recipe progression
+							2. show profile progression
+						</p> -->
+	</div>
+	</div>
+</section>
+<!-- <section>
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -356,28 +407,27 @@
 						</div>
 	</div>
 	</div>
-</section>
+</section> -->
 
 <section>
 <div class="content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Solution</h2>
-								<h3>Second Prototype</h3>
-								<p>Most notable change from the first and second prototype was how my weekly goal illustration was displayed in the Achievements screen. In the previous usability testing, users reported that they could not tell what stage of the goal they were in because there was just an image and a "plus" button which gave them no context. So for the second prototype, I included a day by day goal indicator.</p>
+								<h3>Final Solution</h3>
+								<!-- <p>Most notable change from the first and second prototype was how my weekly goal illustration was displayed in the Achievements screen. In the previous usability testing, users reported that they could not tell what stage of the goal they were in because there was just an image and a "plus" button which gave them no context. So for the second prototype, I included a day by day goal indicator.</p> -->
 								</div>
 	</div>
-</section>
-<section>
-	<div class="container">
-		<div class="contentblock content-wrappeimg">
+	<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
 	<img src="images/thriveinfo.png" class="img-responsive">
 </div>
 </div>
 
 </section>
 
-<section>
+<!-- <section>
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -391,9 +441,9 @@
 						</div>
 	</div>
 	</div>
-</section>
+</section> -->
 
-<section>
+<!-- <section>
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -407,10 +457,10 @@
 						</div>
 	</div>
 	</div>
-</section>
+</section> -->
 
 
-<section>
+<!-- <section>
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -424,7 +474,7 @@
 						</div>
 	</div>
 	</div>
-</section>
+</section> -->
 
 
 <div class="progress-wrap">
@@ -445,8 +495,8 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>1. Technology only amplifies underlying human forces. So study people, learn about people, and listen to people. For technology to actually work, the right intent and capacity have to be there first.<br>
-								2. When designing for an app that is meant to encourage a  lifestyle change, it does not mean I have to include a lot of features. Always consider the bare necessities for a successful product(the mvp).<br>
+								<p>1. Technology only amplifies underlying human forces. So study people, learn about people, and listen to people. For technology to actually work, the right intent and capacity have to be there first.<br><br>
+								2. When designing for an app that is meant to encourage a  lifestyle change, it does not mean I have to include a lot of features. Always consider the bare necessities for a successful product(the mvp).<br><br>
 								3. As designers, we should listen to our users but not blindly allow them to tell us what to do. We need to interpret our findings from user research and make sense of them before supporting out design decisions.
 
 								</p>
