--- a/thrive.html
+++ b/thrive.html
@@ -410,7 +410,7 @@
 </section> -->
 
 <section>
-<div class="content-wrapper750">
+<div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Solution</h2>
