--- a/thrive.html
+++ b/thrive.html
@@ -383,7 +383,7 @@
 		</p>
 		<img src="images/thriveiteration2.png" class="img-responsive">
 </div>
-</div><br><br><br><br><br><br>
+</div>
 
 						<!-- <p>1. show recipe progression
 							2. show profile progression
@@ -391,23 +391,25 @@
 	</div>
 	</div>
 </section>
-<!-- <section>
+
+
+<section>
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Refining</h2>
-								<h3>First Prototype</h3>
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Visual Design</h2>
+								<h3>Style Guide</h3><br><br>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>There were a lot of feedback I received from a thorough usability testing of the first prototype. People loved the idea, but felt the visuals could be improved. To my surprise, one user stated that they were confused as to what the image in home was representing so I knew for the second prototype, I had to work out those issues.
+								<p>
 								</p>
-								<img src="images/thriveprototype1.png" class="img-responsive">
+								<img src="images/thrivestyleguide.png" class="img-responsive">
 						</div>
 	</div>
 	</div>
-</section> -->
+</section>
 
 <section>
 <div class="contentblock content-wrapper750">
