--- a/thrive.html
+++ b/thrive.html
@@ -429,6 +429,41 @@
 
 </section>
 
+<section id="gifbg" >
+	<div class="container">
+		<div class="contentblock">
+		<div class= "row">
+			<div class="col-lg-4 col-md-5 col-sm-6">
+				<h3 style="color:#EDB059;"><span style="font-weight: bold;">FEATURE I</span><br>VISUALIZATION OF PROGRESS</h3>
+				<p style="color:#fff;">Users can daily log their meat-free days throughout the week and be encouraged by the visual representation of the environment improving.</p>
+				<p style="color:#fff;">Users are able to track their progress and see the positive impact of their accumulated meat-free days.</p>
+</div>
+			<div class="col-lg-8 col-md-7 col-sm-6">
+		<br>	<img class="center" src="images/achievements.gif" style="max-width:70%" alt="manager"><br><br><br><br><br><br><br><br>
+		</div>
+	</div>
+
+		<div class= "row">
+			<div class="col-lg-4 col-md-5 col-sm-6">
+				<h3 style="color:#EDB059;"><span style="font-weight: bold;">FEATURE II</span><br>FRIENDLY MOTIVATION</h3>
+				<p style="color:#fff;">Users can form groups with people who have similar goals and compare how they rank to their peers in numnber of meat-free days.</p></div>
+				<div class="col-lg-8 col-md-7 col-sm-6">
+			<br>	<img class="center" src="images/groups.gif" style="max-width:70%" alt="manager"><br><br><br><br><br><br><br><br>
+			</div>
+		</div>
+		<div class= "row">
+			<div class="col-lg-4 col-md-5 col-sm-6">
+				<h3 style="color:#EDB059;"><span style="font-weight: bold;">FEATURE III</span><br>TOOLS FOR SUCCESS</h3>
+				<p style="color:#fff;">Users can look up recipes or learn about vegan diets to equip themselves on this journey.</p>
+			</div>
+			<div class="col-lg-8 col-md-7 col-sm-6">
+			<br>	<img class="center" src="images/recipes.gif" style="max-width:70%" alt="manager">
+			</div>
+	</div>
+</div>
+	</div>
+</section>
+
 <!-- <section>
 <div class="contentblock content-wrapper750">
 		<div class="row">
@@ -492,7 +527,7 @@
 <div class="contentblock content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Reflection</h2>
+							<br><br><br><br><br><br><h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Reflection</h2>
 								<h3>What I learned</h3>
 						</div></div>
 						<div class="row">
