--- a/index.html
+++ b/index.html
@@ -52,22 +52,35 @@
 				</div>
 		</section>
 
+
+
+		<section class="introduction">
+ <div class="middle">
+	 <h1>Hi there 😊</h1>
+	 <p>I'm Michelle Kim, a product designer and a recent design grad from Michigan. I'm a humanity-centered, intentional designer who has a rationale for all of my design decisions. Thank you for exploring my work!</p>
+ </div>
+
+			</section>
+
+
+
+
+<!--
 		<section id="introduction">
 			<div class="container">
 				<div>
 						<div class="row">
 							<div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
 								<div style="padding-top:1.5em;padding-left:1em; padding-bottom:2em;">
-									<h1>Hi, it's nice to meet you</h1>
-									<p>I'm Michelle, a product designer and a recent design grad from the University of Michigan. I'm a passionate designer who is equally comfortable with starting the design process from scratch as well as evolving existing products.</p>
+									<h1>Hi 😊 I'm Michelle,</h1>
+									<p>a product designer and a recent design grad from Michigan. I'm an intentional designer who has a rationale for all of my design decisions.</p>
 								</div>
 							</div>
 							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-								<!-- <img style="width:100%" src="images/thriveindex.png"> -->
 							</div>
 						</div>
 				</div>
-			</section>
+			</section> -->
 
 
 <!-- <section id="introduction">
