--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 
 		<section class="introduction">
  <div class="middle">
-	 <h1>Hi there 😊</h1>
+	 <h1>Hi there!</h1>
 	 <p>I'm Michelle Kim, a product designer and a recent design grad from Michigan. I'm a humanity-centered, intentional designer who has a rationale for all of my design decisions. Thank you for exploring my work!</p>
- </div>
+
+	 <p>Previously worked with <a href="https://kminjin.com/lexmark.html">Lexmark</a>, Comerica Bank, & CNBC</p>
 
 			</section>
 
