--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="index.html" class="navbar-brand">민진
+					<a href="index.html" class="navbar-brand">Michelle Kim
 </a>
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
@@ -56,10 +56,9 @@
 
 		<section class="introduction">
  <div class="middle">
-	 <h1>Hi there!</h1>
-	 <p>I'm Michelle Kim, a product designer and a recent design grad from Michigan. I'm a humanity-centered, intentional designer who has a rationale for all of my design decisions. Thank you for exploring my work!</p>
+	 <h3>Hi, I'm a product designer and a recent design grad from Michigan. I'm a humanity-centered, intentional designer who has a rationale for all of my design decisions. Thank you for exploring my work.</h3>
 
-	 <p>Previously worked with <a href="https://kminjin.com/lexmark.html">Lexmark</a>, Comerica Bank, & CNBC</p>
+	 <h3>Previously worked with <a target="_blank" href="https://kminjin.com/lexmark.html">Lexmark</a>, Comerica Bank, & CNBC.</h3>
 
 			</section>
 
