--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/styleindex.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
-
-<link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 	<body>
 		<section id= "navbar" class="navbar custom-navbar" role="navigation">
@@ -40,7 +40,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="index.html" class="navbar-brand">Michelle Kim
+					<!-- <a href="index.html" class="navbar-brand">Michelle Kim -->
 </a>
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
@@ -53,13 +53,17 @@
 		</section>
 
 
-
-		<section class="introduction">
- <div class="middle">
-	 <h3>Hi, I'm a product designer and a recent design grad from Michigan. I'm a humanity-centered, intentional designer who has a rationale for all of my design decisions. Thank you for exploring my work.</h3>
-
-	 <h3>Previously worked with <a target="_blank" href="https://kminjin.com/lexmark.html">Lexmark</a>, Comerica Bank, & CNBC.</h3>
-
+		<section id="introduction">
+			<div class="container">
+				<div class="row">
+	 				<h1>I'm Michelle Kim, a human-centered product designer. <br><br>I design to improve the human experience and enjoy exploring problem spaces to discover actionable insights.</h1>
+				</div>
+<!-- <a target="_blank" href="https://kminjin.com/lexmark.html"></a> -->
+	 <!-- <h3>Previously worked with Lexmark, Comerica Bank, & CNBC.</h3> -->
+	 <div class="row selected-work">
+	 	<h2>[ selected work <span style='font-size:16px;'>&#8595;</span> ]</h2>
+	 </div>
+</div>
 			</section>
 
 
@@ -94,77 +98,86 @@
 
 	<section id="content">
 		<div class="container">
-			<div class="project img-hover-zoom" style="background-color: #E0F0F6">
+			<div class="project img-hover-zoom">
 				<a href="thrive.html">
 					<div class="row">
-						<div class="col-lg-8 col-md-7 col-sm-12 col-xs-12">
-							<img style="width:100%" src="images/thriveindex.png">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color: #E0F0F6">
+							<img style="width:100%;" src="images/thriveindex.png">
 						</div>
-						<div class="col-lg-4 col-md-5 col-sm-12 col-xs-12">
-							<div style="padding-top:4em;padding-left:1em">
-								<h2>Thrive</h2>
-								<p>A mobile app for people who want to eat less meat</p>
-								<p style="font-weight:bold; font-size:.9em;">/sideproject /individual /spring2020</p>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
+								<h3>Thrive</h3>
+								<h4>PRODUCT DESIGNER | SPRING 2020</h4>
+								<p style="padding-top:.7em;">I drove a user-centered design project to create a mobile app for people who want to eat less meat.</p>
 							</div>
-						</div>
-
+							<div style="padding-left: 3em;">
+							<a class="button" href="thrive.html">Read Case Study</a>
+						</div></div>
 					</div>
 				</a>
 			</div>
 
-			<div class="project img-hover-zoom" style="background-color: #E3F0E6">
+			<div class="project img-hover-zoom">
 				<a href="lexmark.html">
 					<div class="row">
-						<div class="col-lg-8 col-md-7 col-sm-12 col-xs-12">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color: #E3F0E6">
 							<img style="width:100%" src="images/lexmarkindex.png">
 						</div>
 
-						<div class="col-lg-4 col-md-5 col-sm-12 col-xs-12">
-							<div style="padding-top:4em;padding-left:1em">
-								<h2>ServiceNow Redesign</h2>
-								<p>A web app for Lexmark employees</p>
-								<p style="font-weight:bold; font-size:.9em;">/internship /uxdesign /summer2019</p>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
+								<h3>Redesign at Lexmark</h3>
+								<h4>UX DESIGN INTERN | SUMMER 2019</h4>
+								<p style="padding-top:.7em;">Collaborated with developers and managers to redesign an internal service tool with 5000+ users.</p>
 							</div>
-						</div>
+							<div style="padding-left: 3em;">
+							<a class="button" href="lexmark.html">Read Case Study</a>
+						</div></div>
+
 
 					</div>
 				</a>
 			</div>
 
-			<div class="project img-hover-zoom" style="background-color: #E5EAFB">
+			<div class="project img-hover-zoom">
 				<a href="pawls.html">
 					<div class="row">
-						<div class="col-lg-8 col-md-7 col-sm-12 col-xs-12">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color: #E5EAFB">
 							<img style="width:100%" src="images/pawlsindex.png">
 						</div>
-						<div class="col-lg-4 col-md-5 col-sm-12 col-xs-12">
-							<div style="padding-top:4em;padding-left:1em">
-								<h2>Pawls</h2>
-								<p>An IoT tech that helps decrease barking in dogs</p>
-								<p style="font-weight:bold; font-size:.9em;">/courseproject /collaboration /fall2019</p>
+
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
+								<h3>Pawls</h3>
+								<h4>PRODUCT DESIGNER | FALL 2019</h4>
+								<p style="padding-top:.7em;">Collaborated with other student engineers and researchers to create an IoT tech that decreases barking in dogs. </p>
 							</div>
-						</div>
+							<div style="padding-left: 3em;">
+							<a class="button" href="lexmark.html">Read Case Study</a>
+						</div></div>
+
 
 					</div>
 				</a>
 			</div>
 
 
-			<div class="project img-hover-zoom" style="background-color: #FFE3E3">
+			<div class="project img-hover-zoom">
 				<a href="vrgarden.html">
 					<div class="row">
-						<div class="col-lg-8 col-md-7 col-sm-12 col-xs-12">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color: #FFE3E3">
 							<img style="width:100%" src="images/vrgardenindex.png">
 						</div>
-						<div class="col-lg-4 col-md-5 col-sm-12 col-xs-12">
-							<div style="padding-top:4em;padding-left:1em">
-								<h2>Virtual Garden</h2>
-								<p>A virtual reality app that teaches people gardening techniques</p>
-								<p style="font-weight:bold; font-size:.9em;">/virtualreality /collaboration /fall2019</p>
-							</div>
-						</div>
 
-					</div>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
+								<h3>Virtual Garden</h3>
+								<h4>VR DESIGNER | FALL 2019</h4>
+								<p style="padding-top:.7em;">Collaborated with other student designers to create a virtual reality app w/ code that teaches people gardening techniques.</p>
+							</div>
+							<div style="padding-left: 3em;">
+							<a class="button" href="lexmark.html">Read Case Study</a>
+						</div></div>
 				</a>
 			</div>
 		</div>
