--- a/index.html
+++ b/index.html
@@ -101,17 +101,19 @@
 			<div class="project img-hover-zoom">
 				<a href="thrive.html">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color: #E0F0F6">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s" style="background-color: #E0F0F6">
 							<img style="width:100%;" src="images/thriveindex.png">
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.6s">
+
+
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Thrive</h3>
 								<h4>PRODUCT DESIGNER | SPRING 2020</h4>
 								<p style="padding-top:.7em;">I drove a user-centered design project to create a mobile app for people who want to eat less meat.</p>
 							</div>
 							<div style="padding-left: 3em;">
-							<a class="button" href="thrive.html">Read Case Study</a>
+							<a class="button" href="thrive.html">View Case Study</a>
 						</div></div>
 					</div>
 				</a>
@@ -120,18 +122,18 @@
 			<div class="project img-hover-zoom">
 				<a href="lexmark.html">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color: #E3F0E6">
-							<img style="width:100%" src="images/lexmarkindex.png">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.8s" style="background-color: #E3F0E6">
+							<img style="width:100%;" src="images/lexmarkindex.png">
 						</div>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.8s">
 
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Redesign at Lexmark</h3>
 								<h4>UX DESIGN INTERN | SUMMER 2019</h4>
 								<p style="padding-top:.7em;">Collaborated with developers and managers to redesign an internal service tool with 5000+ users.</p>
 							</div>
 							<div style="padding-left: 3em;">
-							<a class="button" href="lexmark.html">Read Case Study</a>
+							<a class="button" href="lexmark.html">View Case Study</a>
 						</div></div>
 
 
@@ -142,18 +144,18 @@
 			<div class="project img-hover-zoom">
 				<a href="pawls.html">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color: #E5EAFB">
-							<img style="width:100%" src="images/pawlsindex.png">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay=".9s" style="background-color: #E5EAFB">
+							<img style="width:100%;" src="images/pawlsindex.png">
 						</div>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".9s">
 
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Pawls</h3>
 								<h4>PRODUCT DESIGNER | FALL 2019</h4>
 								<p style="padding-top:.7em;">Collaborated with other student engineers and researchers to create an IoT tech that decreases barking in dogs. </p>
 							</div>
 							<div style="padding-left: 3em;">
-							<a class="button" href="lexmark.html">Read Case Study</a>
+							<a class="button" href="pawls.html">View Case Study</a>
 						</div></div>
 
 
@@ -165,18 +167,19 @@
 			<div class="project img-hover-zoom">
 				<a href="vrgarden.html">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color: #FFE3E3">
-							<img style="width:100%" src="images/vrgardenindex.png">
-						</div>
 
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="1s" style="background-color: #FFE3E3">
+							<img style="width:100%;" src="images/pawlsindex.png">
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="1s">
+
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Virtual Garden</h3>
 								<h4>VR DESIGNER | FALL 2019</h4>
 								<p style="padding-top:.7em;">Collaborated with other student designers to create a virtual reality app w/ code that teaches people gardening techniques.</p>
 							</div>
 							<div style="padding-left: 3em;">
-							<a class="button" href="lexmark.html">Read Case Study</a>
+							<a class="button" href="vrgarden.html">View Case Study</a>
 						</div></div>
 				</a>
 			</div>
