--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 				</div>
 <!-- <a target="_blank" href="https://kminjin.com/lexmark.html"></a> -->
 	 <!-- <h3>Previously worked with Lexmark, Comerica Bank, & CNBC.</h3> -->
-	 <div class="row selected-work">
+		 <div class="row selected-work wow fadeInUp" data-wow-delay=".3s">
+
 	 	<h2>[ selected work <span style='font-size:16px;'>&#8595;</span> ]</h2>
 	 </div>
 </div>
@@ -122,10 +123,10 @@
 			<div class="project img-hover-zoom">
 				<a href="lexmark.html">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.8s" style="background-color: #E3F0E6">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.7s" style="background-color: #E3F0E6">
 							<img style="width:100%;" src="images/lexmarkindex.png">
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.8s">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.7s">
 
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Redesign at Lexmark</h3>
@@ -144,10 +145,10 @@
 			<div class="project img-hover-zoom">
 				<a href="pawls.html">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay=".9s" style="background-color: #E5EAFB">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay=".8s" style="background-color: #E5EAFB">
 							<img style="width:100%;" src="images/pawlsindex.png">
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".9s">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".8s">
 
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Pawls</h3>
@@ -168,10 +169,10 @@
 				<a href="vrgarden.html">
 					<div class="row">
 
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="1s" style="background-color: #FFE3E3">
-							<img style="width:100%;" src="images/pawlsindex.png">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay=".9s" style="background-color: #FFE3E3">
+							<img style="width:100%;" src="images/vrgardenindex.png">
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="1s">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".9s">
 
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Virtual Garden</h3>
