--- a/about.html
+++ b/about.html
@@ -81,16 +81,15 @@
 	</section>
 
 
-	<section id="about">
+	<section id="about" >
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<h3>Why do I design?</h3>
 				<p style="padding-bottom:2em; line-height: 3rem">I design because like myself, design is inherently optimistic. I believe progress, even in seemingly-impossible challenges, is possible with the right design process. I am a dynamic problem solver who is able to open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for. I design because thoughtful design can improve the human experience.</p>
 </div></div></section>
 
-<section id="about">
+<section id="about2">
 	<div class="row">
-
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 					<h4>PUBLIC ENGAGEMENTS</h4>
 <p style="line-height: 3rem">➡️2019 Drupal Chicago Conference Speaker <br>
