--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<section id="introduction">
 			<div class="container">
 				<div class="row">
-	 				<h1>I'm Michelle Kim, a human-centered product designer. <br><br>I design to improve the human experience and enjoy exploring problem spaces to discover actionable insights.</h1>
+	 				<h1 class="middle">I'm Michelle Kim, a human-centered product designer. <br><br>I design to improve the human experience and enjoy exploring problem spaces to discover actionable insights.</h1>
 				</div>
 <!-- <a target="_blank" href="https://kminjin.com/lexmark.html"></a> -->
 	 <!-- <h3>Previously worked with Lexmark, Comerica Bank, & CNBC.</h3> -->
@@ -94,7 +94,7 @@
 
 
 
-	<section id="content">
+	<section id="content" >
 		<div class="container">
 			<div class="project img-hover-zoom">
 				<a href="thrive.html">
