--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="index.html" class="navbar-brand">Michelle Kim
+					<!-- <a href="index.html" class="navbar-brand">Michelle Kim -->
 	</a>
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
@@ -61,8 +61,24 @@
 		</section>
 
 
+		<section id="introduction">
+			<div class="container">
+				<div class="row">
+					<h1>I design because like myself, design is inherently optimistic. <br><br>I believe progress, even in seemingly-impossible challenges, is possible with the right design process.</h1>
+				</div>
+		</div>
+			</section>
+
+			<section id="introduction">
+				<div class="container" style="background-color:#2E3542;">
+					<div class="row">
+						<h1 style="color:#fff;">I am a dynamic problem solver who is able to open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for.</h1>
+					</div>
+			</div>
+				</section>
+
 	<section id="aboutphotos">
-		<div class="row">
+		<div class="container">
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 				<img src="images/kentuckyphoto.png" width=100% alt="me at brooklyn">
 
@@ -81,11 +97,13 @@
 	</section>
 
 
-	<section id="about" >
+	<section id="about">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h3>Why do I design?</h3>
-				<p style="padding-bottom:2em; line-height: 3rem">I design because like myself, design is inherently optimistic. I believe progress, even in seemingly-impossible challenges, is possible with the right design process. I am a dynamic problem solver who is able to open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for. I design because thoughtful design can improve the human experience.</p>
+				<h3>Who am I?</h3>
+				<p style="padding-bottom:2em; line-height: 3rem">I design because like myself, design is inherently optimistic.
+
+I believe progress, even in seemingly-impossible challenges, is possible with the right design process. I am a dynamic problem solver who is able to open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for. To create thoughtful experiences that can improve the human condition, I believe we need to work closely with the people who the designs will impact.</p>
 </div></div></section>
 
 <section id="about2">
