--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/styleindex.css">
-	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
-
-	<link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
-	</head>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+</head>
 <body>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -60,19 +60,48 @@
 				</div>
 		</section>
 
-
-		<section id="introduction">
-			<div class="container">
+		<section id="content">
+			<div class="container" style="max-width:1100px;">
 				<div class="row">
-					<h1>I design because like myself, design is inherently optimistic. <br><br>I believe progress, even in seemingly-impossible challenges, is possible with the right design process.</h1>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h1 style="padding-bottom:0%;">80 words about me & my design process</h1>
+						<div style="padding-top:2em;padding-bottom:1em;">
+							<p style="padding-bottom:1em; line-height: 3rem; max-width:1000px;">I design because like myself, I believe progress, even in seemingly-impossible challenges, is possible with the right design process. I am a dynamic problem solver who is able to open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for. To create thoughtful experiences that can improve the human condition, I believe we need to work closely with the people who the designs will impact.</p>
+						</div>
+					</div>
 				</div>
-		</div>
+				<div class="row">
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						<h4>PUBLIC ENGAGEMENTS</h4>
+							<p style="line-height: 3rem;">➡️ 2019 Drupal Chicago Conference Speaker <br>
+	 						➡️ Published on the UX Collective, "Can Blind People Use Tinder?" <p>
+					</div>
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						<h4>LET'S CHAT</h4>
+						<p style="line-height: 3rem">👀 Looking for full-time product design positions <br>
+							✉️ <span style="font-weight:bold">minjin@umich.edu</span>
+					</div>
+				</div>
+				<div class="row aboutphotos">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<img src="images/kentuckyphoto.png" width=100% alt="me at brooklyn">
+					</div>
+
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<img src="images/gradphoto.png" width=100% alt="me at brooklyn">
+
+</div>
+
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+	<img src="images/climbingphoto.png" width=100% alt="me at brooklyn">
+
+</div>
 			</section>
 
 
-
-	<section id="aboutphotos">
-		<div class="container">
+		<!-- <section id="introduction">
+			<div class="container">
+				<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 				<img src="images/kentuckyphoto.png" width=100% alt="me at brooklyn">
 
@@ -88,48 +117,9 @@
 
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
-	<section id="about">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h3>Who am I?</h3>
-				<p style="padding-bottom:2em; line-height: 3rem">I design because like myself, design is inherently optimistic.
-
-I believe progress, even in seemingly-impossible challenges, is possible with the right design process. I am a dynamic problem solver who is able to open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for. To create thoughtful experiences that can improve the human condition, I believe we need to work closely with the people who the designs will impact.</p>
-</div></div></section>
-
-<section id="about2">
-	<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-					<h4>PUBLIC ENGAGEMENTS</h4>
-<p style="line-height: 3rem">➡️2019 Drupal Chicago Conference Speaker <br>
-	 ➡️Published on the UX Collective, "Can Blind People Use Tinder?" <p>
-
-</div>
-
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-	<h4>AGENDA</h4>
-<p style="line-height: 3rem">👀Looking for full-time product design positions <br>
-	✉️ Let's chat! <span style="font-weight:bold">minjin@umich.edu</bold>
-
-</div>
-
-					<!-- <h2>Let's chat!</h2>
-<div>
-<a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="w-inline-block">
-		<div class="contact-links">LINKEDIN</div>
-	</a>
-	<a href="mailto:minjin@umich.edu?subject=Hi%20Michelle" class="linkforfooter w-inline-block">
-		<div class="contact-links">EMAIL</div>
-	</a>
-</div> -->
-</div>
-					</div>
-
-</div>
-</section>
 
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
