--- a/index.html
+++ b/index.html
@@ -53,49 +53,22 @@
 		</section>
 
 
-		<section id="introduction">
-			<div class="container">
-				<div class="row">
-	 				<h1 class="middle">I'm Michelle Kim, a human-centered product designer. <br><br>I design to improve the human experience and enjoy exploring problem spaces to discover actionable insights.</h1>
-				</div>
-<!-- <a target="_blank" href="https://kminjin.com/lexmark.html"></a> -->
-	 <!-- <h3>Previously worked with Lexmark, Comerica Bank, & CNBC.</h3> -->
+		<section id="content">
+			<div class="container"  style="max-width:1150px;">
 
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+	 				<h1 class="middle">I'm Michelle Kim, a human-centered product designer. <br><br>I design to improve the human experience and enjoy exploring problem spaces to discover actionable insights.</h1>
+				</div></div>
 </div>
 			</section>
 
 
 
 
-<!--
-		<section id="introduction">
-			<div class="container">
-				<div>
-						<div class="row">
-							<div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
-								<div style="padding-top:1.5em;padding-left:1em; padding-bottom:2em;">
-									<h1>Hi 😊 I'm Michelle,</h1>
-									<p>a product designer and a recent design grad from Michigan. I'm an intentional designer who has a rationale for all of my design decisions.</p>
-								</div>
-							</div>
-							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-							</div>
-						</div>
-				</div>
-			</section> -->
-
-
-<!-- <section id="introduction">
-	<div>
-				<h1>Michelle (minjin) Kim</h1><br>
-					<p>Hi! 👋 I'm a recent University of Michigan graduate with a masters in Human-Computer Interaction. I'm a product designer who is passionate about helping others with intentional design decisions.</p>
-				</div>
-</section> -->
-
-
-
 	<section id="content" >
-		<div class="container">
+		<div class="container"  style="max-width:1150px;">
 			<div class="project img-hover-zoom">
 				<a href="thrive.html">
 					<div class="row">
