--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 
-	<section id="content" >
+	<section id="content" style="padding-bottom:6em;">
 		<div class="container"  style="max-width:1150px;">
 			<div class="project img-hover-zoom">
 				<a href="thrive.html">
