--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h1 style="padding-bottom:0%;">80 words about me & my design process</h1>
 						<div style="padding-top:2em;padding-bottom:1em;">
-							<p style="padding-bottom:1em; line-height: 3rem; max-width:1000px;">I design because like myself, I believe progress, even in seemingly-impossible challenges, is possible with the right design process. I am a dynamic problem solver who is able to open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for. To create thoughtful experiences that can improve the human condition, I believe we need to work closely with the people who the designs will impact.</p>
+							<p style="padding-bottom:1em; line-height: 3rem; max-width:1000px;">I design because like myself, design is inherently optimistic. I believe progress, even in seemingly-impossible challenges, is possible with the right design process. I am a dynamic problem solver who can open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for. To create thoughtful experiences that can improve the human condition, I believe we need to work closely with the people who the designs will impact.</p>
 						</div>
 					</div>
 				</div>
