--- a/about.html
+++ b/about.html
@@ -7,13 +7,10 @@
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
-
 	  gtag('config', 'UA-144593656-1');
 	</script>
-
-
 	<!-- SITE TITLE -->
-	<title>About Me | Michelle Kim's Portfolio</title>
+	<title>Michelle Kim's Portfolio</title>
 
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -34,11 +31,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
-<body>
-
-<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
-
-
 	<body>
 		<section id= "navbar" class="navbar custom-navbar" role="navigation">
 
@@ -49,27 +41,31 @@
 						<span class="icon icon-bar"></span>
 					</button>
 					<!-- <a href="index.html" class="navbar-brand">Michelle Kim -->
-	</a>
+</a>
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="nav-menu-item"><a href="index.html">work</a></li>
-						 <li class="nav-menu-item active" style="font-weight:bold;"><a href="about.html">about</a></li>
+						 <li class="nav-menu-item active"><a href="about.html">about</a></li>
 						 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">resume</a></li>
 					</ul>
 				</div>
 		</section>
 
+
 		<section id="content">
-			<div class="container" style="max-width:1100px;">
+			<div class="container"  style="max-width:1150px;">
+
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h1 style="padding-bottom:0%;">80 words about me & my design process</h1>
-						<div style="padding-top:2em;padding-bottom:1em;">
-							<p style="padding-bottom:1em; line-height: 3rem; max-width:1000px;">I design because like myself, design is inherently optimistic. I believe progress, even in seemingly-impossible challenges, is possible with the right design process. I am a dynamic problem solver who can open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for. To create thoughtful experiences that can improve the human condition, I believe we need to work closely with the people who the designs will impact.</p>
+
+	 				<h1 class="h1exception">73 words about me & my design process</h1>
+				</div></div>
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<p style="padding-bottom:4em; line-height: 3rem; max-width:1000px;">I design because like myself, design is inherently optimistic. I believe progress, even in seemingly-impossible challenges, is possible with the right design process. I am a dynamic problem solver who can open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for. To create thoughtful experiences that can improve the human condition, I believe we need to work closely with the people who the designs will impact.</p>
 						</div>
 					</div>
-				</div>
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 						<h4>PUBLIC ENGAGEMENTS</h4>
