--- a/thrive.html
+++ b/thrive.html
@@ -41,7 +41,7 @@
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="index.html" class="navbar-brand">Michelle Kim</a>
+			<!-- <a href="index.html" class="navbar-brand">Michelle Kim</a> -->
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
