--- a/thrive.html
+++ b/thrive.html
@@ -386,27 +386,19 @@
 	</div>
 </section>
 
-<section>
-<div class="contentblock content-wrapper900">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Solution</h4>
-								<h3>Final Solution</h3>
-								<!-- <p>Most notable change from the first and second prototype was how my weekly goal illustration was displayed in the Achievements screen. In the previous usability testing, users reported that they could not tell what stage of the goal they were in because there was just an image and a "plus" button which gave them no context. So for the second prototype, I included a day by day goal indicator.</p> -->
-								</div>
-	</div>
-	<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-	<img src="images/thriveinfo.png" class="img-responsive">
-</div>
-</div>
-
-</section>
 
 <section id="gifbg" >
 	<div class="container">
-		<div class="contentblock">
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<h4 style="color:#fff;">Solution</h4>
+									<h3 style="color:#fff;">Final Solution</h3>
+									<!-- <p>Most notable change from the first and second prototype was how my weekly goal illustration was displayed in the Achievements screen. In the previous usability testing, users reported that they could not tell what stage of the goal they were in because there was just an image and a "plus" button which gave them no context. So for the second prototype, I included a day by day goal indicator.</p> -->
+									</div>
+		</div>
+
 		<div class= "row">
 			<div class="col-lg-4 col-md-5 col-sm-6">
 				<h3 style="color:#EDB059;"><span style="font-weight: bold;">FEATURE I</span><br>VISUALIZATION OF PROGRESS</h3>
