--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
 
 		<section id="content">
-			<div class="container"  style="max-width:1150px;">
+			<div class="container"  style="max-width:1200px;">
 
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-	 				<h1>I'm Michelle Kim, a human-centered product designer. <br><br>I design to improve the human experience and enjoy exploring problem spaces to discover actionable insights.</h1>
+	 				<h1>I'm Michelle Kim, a human-centered product designer. <br><br>I design to improve the human experience and enjoy exploring problem spaces to uncover actionable insights.</h1>
 				</div></div>
 </div>
 			</section>
